--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2574,38 +2574,37 @@ input, select, textarea {
 
 /* Header */
 
-	#header {
-		display: -moz-flex;
-		display: -webkit-flex;
-		display: -ms-flex;
-		display: flex;
-		-moz-flex-direction: column;
-		-webkit-flex-direction: column;
-		-ms-flex-direction: column;
-		flex-direction: column;
-		-moz-align-items: -moz-flex-end;
-		-webkit-align-items: -webkit-flex-end;
-		-ms-align-items: -ms-flex-end;
-		align-items: flex-end;
-		-moz-justify-content: space-between;
-		-webkit-justify-content: space-between;
-		-ms-justify-content: space-between;
-		justify-content: space-between;
-		background-color: #1f1815;
-		background-attachment: scroll,								scroll;
-		background-image: url("images/overlay.png"), url("../../images/bg.jpg");
-		background-position: top left,							top left;
-		background-repeat: repeat,								no-repeat;
-		background-size: auto,								150%;
-		color: rgba(255, 255, 255, 0.5);
-		height: 100%;
-		left: 0;
-		padding: 8em 4em;
-		position: fixed;
-		text-align: right;
-		top: 0;
-		width: 35%;
-	}
+#header {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: space-between;
+    background-color: #1f1815;
+    background-attachment: scroll;
+    background-image: url("../../images/Charlotte_Skyline.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: rgba(255, 255, 255, 0.5);
+    height: 100%;
+    left: 0;
+    padding: 8em 4em;
+    position: fixed;
+    text-align: right;
+    top: 0;
+    width: 35%;
+}
+/* Add dark overlay to improve text visibility */
+#header::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.4); /* Dark overlay */
+    z-index: -1;
+}
 
 		#header > * {
 			-moz-flex-shrink: 0;
@@ -2645,13 +2644,16 @@ input, select, textarea {
 
 /* Footer */
 
-	#footer .icons {
-		margin: 1em 0 0 0;
-	}
+#footer .icons a {
+    color: rgba(255, 255, 255, 0.8);  /* Increase brightness */
+    font-size: 1.5em; /* Make icons slightly larger */
+    transition: color 0.3s ease-in-out;
+}
 
-		#footer .icons a {
-			color: rgba(255, 255, 255, 0.4);
-		}
+#footer .icons a:hover {
+    color: #00bcd4;  /* Light blue hover effect */
+}
+
 
 	#footer .copyright {
 		color: rgba(255, 255, 255, 0.4);
